# stream-alert

./: .dockerignore  .eslintrc.json  .gitignore  CMakeLists.txt  CONFIG.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  SEA_BUILD.md  copy-dependencies.js  esbuild.config.js  jest.config.js  nest-cli.json  package.json  rollup.config.cjs  sea-config-vite.json  sea-config.json  sea-main.js  sea-postject.js  test-capture.js  tsconfig.build.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: build.yaml  cache.yml  pr.yaml  test-build.yaml
.windsurf/rules/: airules.md
config/: Config.d.ts  default.json
dist-vite/: bundle.js  bundle.js.map
scripts/: build-ts.js  build-vite.js  build.bat  commandcam.cc  copy-essential-deps.js  create-sea-bundle.js  debug-directshow.js  ffmpeg-analysis.js  generate-sea-config.js  sea-postject-vite.js  sea-postject.js  test-capture.js
src/: bot.ts  index.ts  main-vite.ts  main.ts  sea.ts  test-setup.ts
src/app/: app-model.ts  app-module.ts  app-service.ts  custom-logger.ts
src/asyncstore/: async-storage-const.ts  async-storage-value.ts  async-storage.module.ts
src/config/: Config.d.ts  config-load-module.ts  config-resolve-model.ts  config-resolve-module.ts  config-zod-schema.ts  default.json  fields-validator.ts  file-config-reader.service.ts  promt-config-reader.service.ts  reader-config.service.spec.ts  reader-config.service.ts  sea-config.service.ts  simple-config.service.ts
src/config-resolve/: config-resolve-model.ts  config-resolve-module.ts  node-ts-config.service.ts  sea-config.service.ts
src/imagelib/: imagelib-model.ts  imagelib-module.ts  imagelib-service.ts
src/native/: dshow_capture.cpp  dshow_device.cpp  dshow_device.h  frame_buffer.cpp  frame_buffer.h  index.ts  main.cc  native-model.ts  native-module.ts  simple_capture.cpp
src/native/linux/: README.md  capture.cc  main.cc
src/native/linux/capture/: capture.cc  capture.h
src/native/linux/headers/: capture.h
src/native/shared/: imageproc.cc
src/native/shared/headers/: common.h  imageproc.h  logger.h
src/native/shared/imageproc/: imageproc.cc
src/native/shared/logger/: logger.h
src/native/win32/: capture.cc  capture_callback.cc  capture_device.cc  capture_media.cc  capture_old.cc  capture_state.cc  commandcam.cc  logger.h  main.cc
src/native/win32/capture/: capture.cc  capture_callback.cc  capture_device.cc  capture_format.cc  capture_format.h  capture_media.cc  capture_state.cc
src/native/win32/capture/headers/: capture_media.h
src/native/win32/headers/: capture.h  capture_callback.h  capture_device.h  capture_state.h
src/native/win32/imageproc/: imageproc.cc
src/native/win32/imageproc/headers/: imageproc.h
src/semaphor/: semaphor-model.ts  semaphor-service.ts  semaphor.module.ts
src/stream/: stream-model.ts  stream-module.ts  stream-service.ts
src/telegram/: telegram-model.ts  telegram-module.ts  telegram-service.ts
test/: app-module.functional.spec.ts  app.service.spec.ts  imagelib.service.spec.ts  reader-config.service.spec.ts  stream.service.spec.ts  telegram.service.spec.ts  test-framerate.js
test-dist-backup/: main-vite.js
